welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: reassignment to val
    if(day=6 || day=0){
          ^alarmClock:11: error: reassignment to val
    if(day=6 || day=0){
          ^